vlib/v/checker/tests/array_init_with_uninitialized_struct_references_err.vv
struct Person {
	name string
}

fn main() {
	println([]&Person{len: 4})
}
